--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,11 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -16,7 +21,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -30,12 +35,114 @@
         </activity>
         <activity android:name=".landlord_menu" />
         <activity android:name=".student_menu" />
-        <activity android:name=".all_jobs" />
-        <activity android:name=".landlord_personal" />
-        <activity android:name=".student_personal" />
-        <activity android:name=".landlord_login" />
-        <activity android:name=".student_login" />
-        <activity android:name=".login_role" />
+        <activity
+            android:name=".all_jobs"
+            android:parentActivityName=".student_menu">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".student_menu" />
+        </activity>
+        <activity
+            android:name=".landlord_personal"
+            android:parentActivityName=".landlord_menu">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".landlord_menu" />
+        </activity>
+        <activity
+            android:name=".student_personal"
+            android:parentActivityName=".student_menu">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".student_menu" />
+        </activity>
+        <activity
+            android:name=".landlord_login"
+            android:parentActivityName=".login_role">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".login_role" />
+        </activity>
+        <activity
+            android:name=".student_login"
+            android:parentActivityName=".login_role">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".login_role" />
+        </activity>
+        <activity
+            android:name=".login_role"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity
+            android:name=".student_case"
+            android:parentActivityName=".student_menu">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".student_menu" />
+        </activity>
+        <activity
+            android:name=".student_group"
+            android:parentActivityName=".student_menu">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".student_menu" />
+        </activity>
+        <activity
+            android:name=".student_evaulate"
+            android:parentActivityName=".student_menu">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".student_menu" />
+        </activity>
+        <activity android:name=".student_jobManagement">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".student_personal" />
+        </activity>
+        <activity android:name=".student_resumeManagement">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".student_personal" />
+        </activity>
+        <activity android:name=".student_resume_loading">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".student_resumeManagement" />
+        </activity>
+        <activity android:name=".student_resume_version">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".student_resumeManagement" />
+        </activity>
+        <activity android:name=".student_group_content">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".student_group" />
+        </activity>
+        <activity android:name=".all_job_content">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".all_jobs" />
+        </activity>
+
+        <activity android:name=".student_case_manage">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".student_case" />
+
+        </activity>
+
+        <activity android:name=".student_maps">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".student_menu" />
+        </activity>
+
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -44,6 +151,7 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/. 
         -->
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -51,8 +159,7 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".student_case" />
-        <activity android:name=".student_group"></activity>
+
     </application>
 
 </manifest>
